--- a/index.html
+++ b/index.html
@@ -1,8 +1,12 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link
+      rel="icon"
+      type="image/svg+xml"
+      href="/src/assets/png/logo-no-background.png"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>My Blog</title>
   </head>
